k8s/apps/network/unifi-controller/base/deployment-db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: unifi
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      namespace: unifi
      labels:
        app: mongodb
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: pve5
      securityContext:
        runAsNonRoot: false
        # runAsNonRoot: true
        # runAsUser: 999
        # runAsGroup: 999
        # fsGroup: 999
        # fsGroupChangePolicy: OnRootMismatch
        # seccompProfile:
        #   type: RuntimeDefault
      containers:
        - name: mongodb
          image: docker.io/mongo:7.0@sha256:725b4cfe87014950ce9b423ac0a03035f6014a33475030403a3e583eb1485045
          # securityContext:
          #   allowPrivilegeEscalation: false
          #   readOnlyRootFilesystem: false
          #   capabilities:
          #     drop: [ "ALL" ]
          ports:
            - name: mongodb
              containerPort: 27017
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 500m
              memory: 500Mi
          volumeMounts:
            - name: mongodb-init
              mountPath: /docker-entrypoint-initdb.d/init-mongo.sh
              subPath: init-mongo.sh
              readOnly: true
            - name: mongodb-data
              mountPath: /data/db
      volumes:
        - name: mongodb-init
          configMap:
            name: mongodb-init
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-data
