k8s/apps/network/unifi-controller/base/deployment-frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-controller
  namespace: unifi
  labels:
    app: unifi-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unifi-controller
  template:
    metadata:
      namespace: unifi
      labels:
        app: unifi-controller
    spec:
      securityContext:
        runAsNonRoot: false
        # runAsNonRoot: true
        # runAsUser: 999
        # runAsGroup: 999
        # fsGroup: 999
        # fsGroupChangePolicy: OnRootMismatch
        # seccompProfile:
        #   type: RuntimeDefault
      containers:
        - name: unifi-network-application
          image: lscr.io/linuxserver/unifi-network-application:8.6.9@sha256:f8403a6813b9e0e68fcf622a7f00dbdbd772dfd6a11277fedcb54b816e0eb801
          resources:
            requests:
              cpu: 50m
              memory: 500Mi
            limits:
              cpu: 1000m
              memory: 1000Mi
          ports:
            # required
            - name: web-admin
              containerPort: 8443
              protocol: TCP
            # required
            - name: speedtest
              containerPort: 6789
              protocol: TCP
            # required
            - name: device-comm
              containerPort: 8080
              protocol: TCP
            # optional
            - name: http-redirect
              containerPort: 8880
              protocol: TCP
            # optional
            - name: secure-redirect
              containerPort: 8843
              protocol: TCP
            # required
            - name: stun
              containerPort: 3478
              protocol: UDP
            # optional
            - name: snmp-trap
              containerPort: 5514
              protocol: UDP
            # required
            - name: unifi-disc
              containerPort: 10001
              protocol: UDP
#    volumes:
#      - /srv/docker-compose/hosts/unifi/data:/config
