k8s/apps/network/unifi-controller/base/svc-db.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: unifi
spec:
  selector:
    app: mongodb
  ports:
    - name: mongodb
      port: 27017
      targetPort: mongodb
